ON-294 Layout Design Bugs -- Move trending into secondary of article; Adjust spacing in article layout

--- a/app/styleguides/demo/components/article.css
+++ b/app/styleguides/demo/components/article.css
@@ -26,7 +26,6 @@
   padding-bottom: em(20);
   position: relative;
   word-wrap: break-word;
-  margin-top: em(50);
 }
 .article__header {
   display: inline-block;
