--- a/app/styleguides/demo/components/trending-recirculation.css
+++ b/app/styleguides/demo/components/trending-recirculation.css
@@ -4,9 +4,8 @@
 
 .component--trending {
   width: 100%;
-  padding: em(60) em(20) em(80) em(20);
   max-width: em(980);
-  align-self: center;
+  margin: 0 auto;
 
   h2 {
     @mixin trending-recirculation-font1;
